We onboarded the dice rolling demo into our native builds.
Some workarounds were employed to get this to work so we certainly need
to revisit and evolve further.